:package: chore: scrollreveal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header id="header" class="header">
     <nav class="header-nav">
       <a title="logo" href="#" class="header-nav-logo">Barbe<span>Et</span>Moustache.</a>
       <ul>
@@ -31,7 +31,7 @@
     <img class="menu-close" src="./img/x.svg" alt="close" title="fechar" />
 
     <div class="sidebar">
-      <a title="logo" href="#" class="header-nav-logo">Barbe<span>Et</span>Moustache.</a>
+      <a title="logo" href="#">Barbe<span>Et</span>Moustache.</a>
       <ul>
         <li><a href="#home">Accueil</a></li>
         <li><a href="#about">À propos </a></li>
@@ -172,15 +172,13 @@
         <h2 class="title">Contactez-nous</h2>
         <p>Entrez en contact avec BarbeEtMoustache, nous voulons dissiper vos doutes, entendre vos critiques et
           suggestions.</p>
-        <a class="btn" href="https://api.whatsapp.com/send/?phone=+33939391489 text&app_absent=0">Entrez en contact</a>
+        <a href="https://api.whatsapp.com/send/?phone=+33939391489 text&app_absent=0">Entrez en contact</a>
       </div>
 
       <div class="adress">
-        <ul>
-          <li>(93) 939 1489</li>
-          <li>Nº83 Rue Saint-Sébastien, Marseille, France</li>
-          <li>barbeetmoustachecontact@hotmail.com</li>
-        </ul>
+        <p>(93) 939 1489</p>
+        <p>Nº83 Rue Saint-Sébastien, Marseille, France</p>
+        <p>barbeetmoustachecontact@hotmail.com</p>
       </div>
 
     </section>
@@ -204,6 +202,7 @@
     </div>
 
   </footer>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script src="./script/main.js"></script>
 </body>
 
