:lipstick: feat: add icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./img//scissors-bold.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -43,7 +44,7 @@
   <main>
     <section id="home" class="container">
       <div class="image">
-        <img src="./img/picture_1.jpg" alt="" />
+        <img src="./img/picture_1.jpg" alt="homem coranto cabelo" />
       </div>
       <div class="text">
         <h2>Santé naturelle pour</br>
@@ -52,7 +53,7 @@
         <p>
           Un barbier exclusif à Marseille, spécialisé dans les soins naturels
         </p>
-        <a href="#">Réserver un rendez-vous</a>
+        <a href="#contact">Réserver un rendez-vous</a>
       </div>
     </section>
     <section class="enable-animation">
