:lipstick: feat: update scrollreveal

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@700&family=Poppins:wght@700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;600;700&family=Josefin+Sans:wght@300;400;500;600;700&family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@700&family=Poppins:wght@700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.0.3/src/bold/style.css" />
 
@@ -47,13 +47,13 @@
         <img src="./img/picture_1.jpg" alt="homem coranto cabelo" />
       </div>
       <div class="text">
-        <h2>Santé naturelle pour</br>
+        <h2 class="title">Santé naturelle pour</br>
           vos cheveux,votre barbe </br>
           et votre peau</h2>
-        <p>
+        <p class="paragraph">
           Un barbier exclusif à Marseille, spécialisé dans les soins naturels
         </p>
-        <a href="#contact">Réserver un rendez-vous</a>
+        <a class="botao" href="#contact">Réserver un rendez-vous</a>
       </div>
     </section>
     <section class="enable-animation">
@@ -75,27 +75,23 @@
     <section id="about" class="container">
 
       <div class="text">
-        <h2>À propo de nous</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Sequi cumque omnis iusto, accusamus consequatur,
-          aperiam ex maiores consectetur earum quas voluptatibus. Fugiat natus rerum non illo distinctio sed eveniet
-          vel!
+        <h2 class="title">À propos de nous</h2>
+        <p class="paragraph">
+          Chez BarbeEtMoustache, notre dévouement envers l'art de la barbe et de la moustache est inégalé. Guidés par
+          une passion profonde, notre équipe de barbiers chevronnés et d'experts en soins capillaires s'engage à
+          sublimer chaque aspect de ces attributs masculins iconiques.
         </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Sequi cumque omnis iusto, accusamus consequatur,
-          aperiam ex maiores consectetur earum quas voluptatibus. Fugiat natus rerum non illo distinctio sed eveniet
-          vel!
+        <p class="paragraph">
+          Chaque homme porte sa barbe d'une manière unique,
+          et c'est pourquoi nous offrons une approche personnalisée, allant des coupes soignées aux styles plus
+          audacieux, en veillant toujours à réaliser la vision de nos clients.
         </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-          Sequi cumque omnis iusto, accusamus consequatur,
-          aperiam ex maiores consectetur earum quas voluptatibus. Fugiat natus rerum non illo distinctio sed eveniet
-          vel!
+        <p class="paragraph">
+          Nous sommes votre partenaire dévoué pour magnifier votre style facial, offrant à la fois des soins de qualité
+          supérieure et une communauté où vous pouvez vous épanouir en exprimant fièrement votre individualité.
         </p>
       </div>
-      <div class="image">
+      <div class="image img-2">
         <img src="./img/picture_3.jpg" alt="" />
       </div>
     </section>
@@ -118,8 +114,8 @@
     <section id="service" class="container">
 
       <div class="text">
-        <h2>Services</h2>
-        <p>
+        <h2 class="title">Services</h2>
+        <p class="paragraph">
           Avec plus de 10 ans sur le marché, <strong>Barbe<span>Et</span>Moustache</strong> a déjà conquit des clients
           de pays grâce à des traitements
           exclusifs et totalement naturels.
@@ -129,20 +125,18 @@
         <div class="card">
           <img src="./img/hair-cutting.png" alt="">
           <h2>Thérapie capillaire</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore, maiores velit libero doloribus
-            voluptatibus pariatur.</p>
+          <p>Étude des cheveux, du cuir chevelu et des poils pour traiter et maintenir leur santé.</p>
         </div>
         <div class="card">
           <img src="./img/tesoura-e-pente.png" alt="">
           <h2>Coupes</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore, maiores velit libero doloribus
-            voluptatibus pariatur.</p>
+          <p> Coupes de cheveux modernes et classiques, coloration et pose de perruques.</p>
         </div>
         <div class="card">
           <img src="./img/shampoo-para-animais-de-estimacao.png" alt="">
           <h2>Traitement</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempore, maiores velit libero doloribus
-            voluptatibus pariatur.</p>
+          <p>Traitement de renforcement capillaire contre le froid pour la barbe et traitement de la chute des cheveux.
+          </p>
         </div>
       </div>
     </section>
@@ -165,18 +159,21 @@
     <section style="height: 300px;  background-image: url('./img/picture_2.jpg');    
     background-position: center ;
     background-size: cover;
-    background-repeat: no-repeat;" class="container">
+    background-repeat: no-repeat;
+    background-color: brown;" class="banner container">
     </section>
     <section id="contact" class="container">
 
       <div class="text">
         <h2 class="title">Contactez-nous</h2>
-        <p>Entrez en contact avec BarbeEtMoustache, nous voulons dissiper vos doutes, entendre vos critiques et
+        <p class="paragraph">Entrez en contact avec BarbeEtMoustache, nous voulons dissiper vos doutes, entendre vos
+          critiques et
           suggestions.</p>
-        <a href="https://api.whatsapp.com/send/?phone=+33939391489 text&app_absent=0">Entrez en contact</a>
+        <a class="botao" href="https://api.whatsapp.com/send/?phone=+33939391489 text&app_absent=0">Entrez en
+          contact</a>
       </div>
 
-      <div class="adress">
+      <div class="adress paragraph">
         <p>(93) 939 1489</p>
         <p>Nº83 Rue Saint-Sébastien, Marseille, France</p>
         <p>barbeetmoustachecontact@hotmail.com</p>
@@ -189,6 +186,11 @@
       <a href="#home">Barbe<span>Et</span>Moustache.</a>
       <p>©2021 BarbeEtMoustache </p>
       <p>Todos os direitos reservados.</p>
+      <p> Feito por 🏳️‍🌈
+        <a href="https://github.com/cleitonBarros" target="_blank" rel="noreferrer">
+          Cleiton Barros
+        </a>
+      </p>
     </div>
     <div class="social">
       <a href="https://instagram.com" target="_blank">
