--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     background-color: brown;" class="banner container">
     </picture>
     <section id="contact">
-      <article class="container">
+      <article id="contact" class="container">
         <aside class="text">
           <h2 class="title">Contactez-nous</h2>
           <p class="paragraph">Entrez en contact avec BarbeEtMoustache, nous voulons dissiper vos doutes, entendre vos
@@ -215,7 +215,7 @@
         <a href="#home">Barbe<span>Et</span>Moustache.</a>
         <p>©2021 BarbeEtMoustache </p>
         <p>Todos os direitos reservados.</p>
-        <p> Feito por 🏳️‍🌈
+        <p> Feito por ✄
           <a href="https://github.com/cleitonBarros" target="_blank" rel="noreferrer">
             Cleiton Barros
           </a>
